视频分片上传

--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -22,7 +22,7 @@ block content
         .row
           .col-md-6
             .card
-              img.card-img-top(src='https://img3.doubanio.com/view/photo/l/public/p2493318100.webp' data-video="http://vt1.doubanio.com/201803090959/8136080f12b911faf3e4df8b35eada9e/view/movie/M/302260827.mp4")
+              img.card-img-top(src='http://static.huangzhh.com/iTZZazMgBpECfcWxQvpSN.png' data-video="http://static.huangzhh.com/3muThRcIwoW98LDJaXzwt.mp4")
               .card-body
                 h4.card-title 这是电影标题
                 p.card-desc 这是电影描述
@@ -30,7 +30,7 @@ block content
                 small.text-muted 1天前更新
           .col-md-6
             .card
-              img.card-img-top(src='https://img3.doubanio.com/view/photo/l/public/p2493318100.webp' data-video="http://vt1.doubanio.com/201803090959/8136080f12b911faf3e4df8b35eada9e/view/movie/M/302260827.mp4")
+              img.card-img-top(src='http://static.huangzhh.com/iTZZazMgBpECfcWxQvpSN.png' data-video="http://static.huangzhh.com/3muThRcIwoW98LDJaXzwt.mp4")
               .card-body
                 h4.card-title 这是电影标题
                 p.card-desc 这是电影描述
@@ -39,7 +39,7 @@ block content
         .row
           .col-md-6
             .card
-              img.card-img-top(src='https://img3.doubanio.com/view/photo/l/public/p2493318100.webp' data-video="http://vt1.doubanio.com/201803090959/8136080f12b911faf3e4df8b35eada9e/view/movie/M/302260827.mp4")
+              img.card-img-top(src='http://static.huangzhh.com/iTZZazMgBpECfcWxQvpSN.png' data-video="http://static.huangzhh.com/3muThRcIwoW98LDJaXzwt.mp4")
               .card-body
                 h4.card-title 这是电影标题
                 p.card-desc 这是电影描述
@@ -47,7 +47,7 @@ block content
                 small.text-muted 1天前更新
           .col-md-6
             .card
-              img.card-img-top(src='https://img3.doubanio.com/view/photo/l/public/p2493318100.webp' data-video="http://vt1.doubanio.com/201803090959/8136080f12b911faf3e4df8b35eada9e/view/movie/M/302260827.mp4")
+              img.card-img-top(src='http://static.huangzhh.com/iTZZazMgBpECfcWxQvpSN.png' data-video="http://static.huangzhh.com/3muThRcIwoW98LDJaXzwt.mp4")
               .card-body
                 h4.card-title 这是电影标题
                 p.card-desc 这是电影描述
